<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="question_india">Taj Mahal is Best?</string>
    <string name="question_America">President george washington was 1st official president?</string>
    <string name="question_pakistan">Do you know pakistan exists?</string>
    <string name="question_japan">Is tokyo capital of Japan?</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="previous_button">Previous</string>
    <string name="title_activity_cheat">CheatActivity</string>
    <string name="waring_text">Do you really wanna see the Answer</string>
    <string name="answer_button">Show Answer</string>
    <string name="cheat_button_text">Cheat</string>
    <string name="judgment_toast">You Cheated!</string>
</resources>
