<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity = "center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.prabhav.geoquiz.QuizActivity"
    tools:showIn="@layout/activity_quiz">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id= "@+id/txt_view"
        android:layout_marginLeft="100dp"
        android:padding = "24dp"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id = "@+id/true_button"
            android:text="@string/true_button"/>
        <Button
            android:layout_width="wrap_content"
            android:id = "@+id/false_button"
            android:layout_height="wrap_content"
            android:text="@string/false_button"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:id= "@+id/nxt_button"
        android:text="@string/next_button"
        android:layout_gravity="right"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom|left"
        android:id= "@+id/prv_button"
        android:text="@string/previous_button"
        android:layout_gravity="left"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cheat_button"
        android:text="@string/cheat_button_text"/>
</LinearLayout>
